Fix layout shifting on dynamic viewports

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -437,7 +437,8 @@ main {
 #hero {
   position: relative;
   width: 100%;
-  min-height: 100dvh;
+  min-height: 100vh;
+  min-height: 100svh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -717,7 +718,8 @@ main {
 #about {
   position: relative;
   padding: var(--section-padding);
-  min-height: 100dvh;
+  min-height: 100vh;
+  min-height: 100svh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -761,7 +763,8 @@ main {
 }
 
 #projects {
-  min-height: 100dvh;
+  min-height: 100vh;
+  min-height: 100svh;
   padding: var(--section-padding);
   display: grid;
   justify-content: center;
@@ -926,7 +929,8 @@ main {
 }
 
 #skills {
-  min-height: 100dvh;
+  min-height: 100vh;
+  min-height: 100svh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -976,7 +980,8 @@ main {
 }
 
 footer {
-  min-height: 100dvh;
+  min-height: 100vh;
+  min-height: 100lvh;
   display: flex;
   flex-direction: column;
   align-items: center;
